--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -5,23 +5,29 @@
 
 \setlength{\baselineskip}{25pt} % 25磅行距
 
-作为市场占有率最高的智能手机操作系统，安卓系统吸引了无数开发者为其开发应用，也使各种各样与安卓应用及其研发相关的研究得以开展。
-然而，在浩如烟海的安卓应用研究中，针对仿冒应用的研究仍相当有限。
-有别于官方发布的正版应用，仿冒应用属于移动灰色产业的一环，其目的各异，难以一概而论，其行为特征更是不得而知。
-由于我们对移动灰色产业知之甚少，仿冒应用的产业链及其生态对我们仍是一个谜。
+作为市场占有率最高的智能手机操作系统，安卓系统拥有基数庞大的用户群体，也吸引了无数开发者为其开发应用，构筑出一个生机勃勃的生态系统。
+然而，在浩如烟海的安卓应用中，潜藏着形形色色的移动黑灰色产业链条，其中既包括如恶意应用一类的研究热点，也有仿冒应用等鲜受关注的领域。
+有别于官方发布的正版应用，仿冒应用属于移动灰色产业的一环，其目的各异，难以一概而论。
+而与以恶意应用为代表的研究热点不一样，我们对仿冒应用的生态并不了解，对其行为、特征更是知之甚少。
 
-为了填补这一部分的空白，我们从现实的安卓应用市场中爬取了大量真实数据，对一批从工业界中找到的仿冒应用进行了已知的首个系统、全面的大规模实证研究。
-由于仿冒应用的模仿对象往往是较为热门的应用，我们按照知名数据分析机构公布的排行榜确定了全网最受欢迎的前50款应用，然后使用网络爬虫搜集了与这批热门应用相关的超过150,000个应用样本作为研究对象并收录进数据库，以进行全面的研究。
+得益于对恶意应用较为充分的理解，业界对恶意应用的监控成为了可能。
+因而即使爆发了新型的恶意应用，各厂家也能及时推出具有针对性的方案。
+相对地，我们对仿冒应用的认识匮乏，则很可能会成为隐患。
+仿冒应用都有怎样的形态？仿冒应用在各个市场上的分布如何？它们是否会包含恶意行为？有什么样的发展趋势？
+这些问题都尚未有人给出过解答。
+在未有前人研究基础的情况下，直接从业界收集数据入手分析无疑是获得第一手资料的最佳途径。
+因此，我们进行了针对仿冒应用的大规模数据收集和实证研究，并且结合市场上的评论对仿冒应用获得的反馈作出了进一步分析。
 
-本文呈现了我们对这批样本从三个不同视角进行探究的结果，其分别为：仿冒应用的基本特征，针对仿冒样本的量化分析，及仿冒应用的发展轨迹。
-三个视角由浅入深，从仿冒应用的应用名、包名和APK包大小等基本信息特征开始测量，再将仿冒应用数据与其来源的应用市场结合分析，最后引入时间因素对数据进行挖掘。
+在实证研究方面，针对上述问题，我们从三个不同视角对数据进行了探究，其分别为：仿冒应用的基本特征，影响仿冒应用数量的因素，以及仿冒应用的发展轨迹。
+三个视角由浅入深，从仿冒应用的应用名、包名和APK包大小等基本信息特征开始测量，再对可能与仿冒应用数量关联的因素进行量化分析，最后引入时间因素对数据进行挖掘。
 从三个不同视角的分析中，本文提供了包括仿冒应用命名倾向、仿冒应用作者对应用市场拦截的规避策略等珍贵的领域知识。
 本文还对数据中较为特别的样本作出了详尽的案例分析，除了可以印证上述的领域知识与发现之外，也能引起我们对现今应用市场生态环境的思考。
 
-最后，为了深化对仿冒应用的认识，我们又针对仿冒应用在应用市场上获得的评级、评论等用户反馈进行了一系列的分析与验证。
+在用户反馈分析方面，我们针对仿冒应用在应用市场上获得的评级和评论等进行了一系列的分析与验证。
 鉴于前人研究中有对应用进行排名欺诈行为的探索，我们也使用了两个不同的方法，从不同方面验证我们寻找到的仿冒应用中是否存在排名欺诈行为。
-结合最后的人工复核，我们确认了仿冒应用中确实存在排名欺诈行为的事实，向仿冒应用生态认知补上了一块拼图。
+结合最后的人工复核，我们确认了仿冒应用中确实存在排名欺诈行为的事实，向仿冒应用生态认知的谜题补上了一块拼图。
 
-我们希望本文可以为读者提供一个面向仿冒应用及其生态的清晰视角，并借此抛砖引玉，吸引更多科研人员投入到对安卓灰色产业的观察研究中。
+借助本文提供的数据和分析结果，我们希望读者能获得一个面向仿冒应用及其生态的清晰视角。
+同时，我们更希望本文能抛砖引玉，吸引更多科研人员投入到对移动灰色产业的观察研究中。
 
 \sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析, 排名欺诈}
