--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -230,6 +230,16 @@
 	pages={95-109}
 }
 
+@inproceedings{zhou2012hey,
+  title={Hey, you, get off of my market: detecting malicious apps in official and alternative android markets.},
+  author={Zhou, Yajin and Wang, Zhi and Zhou, Wu and Jiang, Xuxian},
+  booktitle={NDSS},
+  volume={25},
+  number={4},
+  pages={50--52},
+  year={2012}
+}
+
 @inproceedings{Felt2011ASO,
 	title={A survey of mobile malware in the wild},
 	author={Adrienne Porter Felt and Matthew Finifter and Erika Chin and Steve Hanna and David A. Wagner},
@@ -338,12 +348,34 @@
 	title = {Number of available applications in the Google Play Store from December 2009 to December 2019}
 }
 
+@online{anjian,
+	year = {2020},
+	url = {http://m.anjian.com/},
+	citedate = {March 20, 2020},
+	title = {手机按键精灵官网}
+}
+
+@online{iapp,
+	year = {2020},
+	url = {http://yougais.com/},
+	citedate = {March 20, 2020},
+	title = {iApp官网}
+}
+
 @techreport{McAfee_mobile_thread_report,
 	author = {McAfee},
 	year = {2018},
 	url = {https://www.mcafee.com/enterprise/en-us/assets/reports/rp-mobile-threat-report-2018.pdf},
 	citedate = {September 26, 2018},
 	title = {McAfee Mobile Threat Report Q1, 2018}
+}
+
+@techreport{anquanke_framework,
+	author = {McAfee},
+	year = {2018},
+	url = {https://www.anquanke.com/post/id/178540},
+	citedate = {May 16, 2019},
+	title = {黑灰产的廉价“温床”—— APP生成框架}
 }
 
 @techreport{ChineseAppStoreReport,
@@ -469,4 +501,12 @@
 	title = {Google Play},
 	url = {https://play.google.com/store/apps},
 	citedate = {February, 23, 2020}
+}
+
+@inproceedings{pandita2013whyper,
+  title={$\{$WHYPER$\}$: Towards Automating Risk Assessment of Mobile Applications},
+  author={Pandita, Rahul and Xiao, Xusheng and Yang, Wei and Enck, William and Xie, Tao},
+  booktitle={Presented as part of the 22nd $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 13)},
+  pages={527--542},
+  year={2013}
 }
