--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -12,7 +12,7 @@
 这些维度包括了APK包中的安全证书信息、应用大小、应用名、包名和时间因素等等。
 
 % Through our measurements we gain valuable experience on fake apps from several perspectives, findings like fake samples' naming tendency and fake developers' evasive strategies are inferred.
-然后，我们将收集到的数据分为了\emph{仿冒应用的基本特征}、\emph{针对仿冒样本的量化分析}和\emph{仿冒应用的发展轨迹}三个不同视角进行了测量，获得了不少宝贵的经验，并推断出了一些发现，比如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略。
+然后，我们将收集到的数据分为了\emph{仿冒应用的基本特征}、\emph{影响仿冒应用数量的因素}和\emph{仿冒应用的发展轨迹}三个不同视角进行了测量，获得了不少宝贵的经验，并推断出了一些发现，比如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略。
 % To support our findings, we further present a few study cases which provide us a more detailed look into fake apps to back our discoveries on fake app ecosystem.
 为了佐证我们的发现，我们进一步给出了从数据集中挑选的几个研究案例。
 这几个案例进一步拉近了我们与仿冒距离，也为我们对仿冒应用生态系统的发现提供了实例支持。
