--- a/edwin_2019/B5-Algorithms.tex
+++ b/edwin_2019/B5-Algorithms.tex
@@ -2,8 +2,7 @@
 %                 算  法                  %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\makeatletter
-\renewcommand*{\l@algocf}[2]{\@dottedtocline{1}{1em}{2.3em}{算法 #1 }{#2}}
-\makeatother
+\renewcommand{\cfttabpresnum}{算法}
+\setlength{\cfttabnumwidth}{3em}
 
 \listofalgorithms
