--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -362,6 +362,13 @@
 	title = {iApp官网}
 }
 
+@online{burpsuite,
+	year = {2020},
+	url = {https://portswigger.net/},
+	citedate = {March 21, 2020},
+	title = {Burpsuite}
+}
+
 @techreport{McAfee_mobile_thread_report,
 	author = {McAfee},
 	year = {2018},
