--- a/edwin_2019/chapter-feedback.tex
+++ b/edwin_2019/chapter-feedback.tex
@@ -1,19 +1,24 @@
-\chapter{对仿冒应用的评论收集与分析}
+\chapter{仿冒应用的评论分析}
 \label{chp:feedback}
 
-在完成了上文对仿冒应用的分析之后，我们对用户面向这些仿冒应用持有的态度也十分好奇。
+应用市场中的用户反馈是Android应用生态的重要环节。
+为了进一步对仿冒应用的生态有所了解，我们有必要搜集和分析仿冒应用的评论。
+对于与仿冒应用相关的评论，我们有以下待解答的问题：
 有多少用户会对这些应用进行评论？
 用户对这些应用的使用感受如何？
 我们有没有可能从用户评论里获取到其他信息？
-为此，我们从\texttt{360手机助手}应用商店中随机爬取了部分应用的评论，从中筛选出了与我们的仿冒应用包名相符的应用评论，然后对这些评论进行了一些处理和分析。
-其中，每天评论都会附带一个评价分数，某款App在市场上的平均评价就是所有评论评分的均值。
+
+为了回答这些问题，我们从\texttt{360手机助手}应用商店中爬取了部分应用和它们的所有历史评论，然后对这些评论进行了处理和分析。
 
 \section{评论数据收集}
-我们分别从\texttt{360手机助手}中随机选取了少量应用，然后爬取了它们的所有历史评论，再和我们数据集中的样本做比对。
-对于某款仿冒应用，如果其APK包来源包含\texttt{360手机助手}，而且其包名包含在我们在对应市场中爬取评论的应用包名列表中，我们就将这个应用的历史评论提取出来。
+由于Janus平台上并不提供评论数据，所以我们只能重新在应用市场上收集评论数据。
+在\texttt{360手机助手}应用商店中，我们随机挑选了856个应用，爬取了这些应用的APK包和它们的所有历史评论。
+之后，我们将上一次数据收集时保存的正版应用的信息重新导入\mytool，并从这一批应用中筛选出了对应仿冒应用。
+
+每条评论都会附带一个评价分数，某款App在市场上的平均评价就是所有评论评分的均值。
 对于每条评论信息，我们能收集到的数据项是：\texttt{应用包名}、\texttt{用户ID}、\texttt{评论内容}、\texttt{评分}和\texttt{评论日期}共五项。
 
-\subsection{数据概览}
+\subsection{评论数据概览}
 在我们收集评论的所有856个应用中，有6款应用与先前仿冒应用数据中的包名对应。
 要注意的是，由于我们的仿冒应用列表为针对50个热度最高的目标App整理而成，而收集评论的应用是在整个市场范围内随机挑选的，所以这里的仿冒应用占总体应用比例较小。但这不意味着整个市场中就只有这几款应用是仿冒应用。
 另外，由于这856个应用是随机挑选的，我们认为这批数据具有一定的代表性，可以应以反映整个市场的评论分布情况。
