--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -46,5 +46,8 @@
 用户对应用的不满、功能上的建议、bug的反馈，都可以反映在差评上。
 关于用户差评，还有很多的研究空间。
 
+最后，\mytool 框架本身，无论是代码层面还是设计层面，也有值得改善的地方。
+比如是否能利用自动化爬虫框架提高爬虫模块的鲁棒性（对抗应用商店的反爬虫技术、下载稳定性），工具本身的代码优化，还有工具整体的易用性、稳定性等。
+
 总之，从整体上看，本文的工作还有很多可以深化的部分。
 我们希望本文能抛砖引玉，在让读者对移动应用黑色产业有更多认识的同时，激发读者对仿冒应用等方面的研究兴趣，并从上述几点出发，为后人带来更多深入而完善的相关研究。
