--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -121,9 +121,9 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 前文的学术界研究现状，不仅反映出移动黑灰产业是目前的研究热点之一，更反映出移动黑灰产从业者无孔不入的特点。
 为了保障正当开发者的利益与消费者的权益，我们需要对移动黑灰产有更全面、更深入的理解，从而更好地预防未知的威胁。
 然而，现有研究提供的知识仍有空缺部分，仿冒应用部分正是缺口之一。
-因此，我们首先需要搜集大量仿冒应用的信息，补全我们对移动黑灰产这一环节的认识。
+仿冒应用有什么样的形态？什么样的应用更有可能被仿冒？仿冒应用的发展有什么样的趋势？这一环节会与其他黑灰产业环节有关联吗？
 
-为了达到这个目标，我们借助犇众信息的移动安全威胁数据平台Janus\footnote{\url{https://www.appscan.io/}}搜集并分析了大量应用样本，完成了一次大规模实证研究，对仿冒应用作出了较为全面的剖析，填补了本领域的研究空白。
+为了回答这些疑问，我们借助犇众信息的移动安全威胁数据平台Janus\footnote{\url{https://www.appscan.io/}}搜集并分析了大量应用样本，完成了一次大规模实证研究，对仿冒应用作出了较为全面的剖析，填补了本领域的研究空白。
 通过收集仿冒应用在市场上获得的反馈，我们还进一步验证了仿冒应用和排名欺诈行为的关系，进一步地提供了关于仿冒应用生态的知识。
 
 
@@ -189,6 +189,8 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 \fullref{chp:background} 介绍了Android应用的构建流程、Android安全证书机制、应用市场与黑灰产业的关系和一些已知的移动黑灰产知识。
 
 \fullref{chp:dataCollection} 提供了本篇研究的概览，解释了数据收集流程。包括收集了什么数据、收集数据的分步解释和收集到的数据概览。
+
+\fullref{chp:fakerevealer} 阐述了\mytool 的运行流程，并详细介绍了其中三个组件（应用收集器、迭代搜索器和仿冒应用过滤器）的设计与实现。
 
 \fullref{chp:discoveries} 从多个视角分类提出并解说针对这批仿冒应用数据得到的发现。三个视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成了多个不同的研究问题。
 
