--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -110,6 +110,9 @@
 
 %============================ 可以自定义文字块 ================================%
 \newcommand\mytool{FakeRevealer}
+\newcommand\componentA{应用收集器}
+\newcommand\componentB{迭代搜索器}
+\newcommand\componentC{应用过滤器}
 
 %交叉引用格式
 \renewcommand\figureautorefname{图}
