--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -190,7 +190,7 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 
 \fullref{chp:dataCollection} 提供了本篇研究的概览，解释了数据收集流程。包括收集了什么数据、收集数据的分步解释和收集到的数据概览。
 
-\fullref{chp:fakerevealer} 阐述了\mytool 的运行流程，并详细介绍了其中三个组件（应用收集器、迭代搜索器和仿冒应用过滤器）的设计与实现。
+\fullref{chp:fakerevealer} 阐述了\mytool 的运行流程，并详细介绍了其中三个组件（\componentA、\componentB 和\componentC）的设计与实现。
 
 \fullref{chp:discoveries} 从多个视角分类提出并解说针对这批仿冒应用数据得到的发现。三个视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成了多个不同的研究问题。
 
