--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -13,19 +13,22 @@
 得益于对恶意应用较为充分的理解，业界对恶意应用的监控成为了可能。
 因而即使爆发了新型的恶意应用，各厂家也能及时推出具有针对性的方案。
 相对地，我们对仿冒应用的认识匮乏，则很可能会成为隐患。
-仿冒应用都有怎样的形态？仿冒应用在各个市场上的分布如何？它们是否会包含恶意行为？有什么样的发展趋势？
+仿冒应用都有怎样的形态？仿冒应用在各个市场上的分布如何？它们是否会包含恶意行为？有什么样的发展趋势？和其他黑灰产环节是否会有联系？
 这些问题都尚未有人给出过解答。
 在未有前人研究基础的情况下，直接从业界收集数据入手分析无疑是获得第一手资料的最佳途径。
-因此，我们进行了针对仿冒应用的大规模数据收集和实证研究，并且结合市场上的评论对仿冒应用获得的反馈作出了进一步分析。
+因此，我们进行了针对仿冒应用的大规模数据收集和实证研究，
+其中实证研究分为数据挖掘，案例分析和用户反馈分析三个部分。
 
-在实证研究方面，针对上述问题，我们从三个不同视角对数据进行了探究，其分别为：仿冒应用的基本特征，影响仿冒应用数量的因素，以及仿冒应用的发展轨迹。
+在数据挖掘方面，针对前面提到的问题，我们从三个不同视角对数据进行了探究，其分别为：仿冒应用的基本特征，影响仿冒应用数量的因素，以及仿冒应用的发展轨迹。
 三个视角由浅入深，从仿冒应用的应用名、包名和APK包大小等基本信息特征开始测量，再对可能与仿冒应用数量关联的因素进行量化分析，最后引入时间因素对数据进行挖掘。
 从三个不同视角的分析中，本文提供了包括仿冒应用命名倾向、仿冒应用作者对应用市场拦截的规避策略等珍贵的领域知识。
-本文还对数据中较为特别的样本作出了详尽的案例分析，除了可以印证上述的领域知识与发现之外，也能引起我们对现今应用市场生态环境的思考。
 
-在用户反馈分析方面，我们针对仿冒应用在应用市场上获得的评级和评论等进行了一系列的分析与验证。
-鉴于前人研究中有对应用进行排名欺诈行为的探索，我们也使用了两个不同的方法，从不同方面验证我们寻找到的仿冒应用中是否存在排名欺诈行为。
-结合最后的人工复核，我们确认了仿冒应用中确实存在排名欺诈行为的事实，向仿冒应用生态认知的谜题补上了一块拼图。
+案例分析方面，我们从收集到的数据中手动筛选出了其中具有代表性的三个案例。
+这些案例除了可以印证上述的领域知识与发现之外，还提供了更多关于仿冒应用生态的细节，值得引起我们对现今应用市场生态环境的思考。
+
+在用户反馈分析方面，我们针对仿冒应用在应用市场上获得的评级和评论等进行了一系列的分析，以了解用户对仿冒应用的态度及验证仿冒应用与移动黑灰产中的排名欺诈是否存在关联。
+鉴于前人研究中有对应用进行排名欺诈行为的探索，我们使用了两个不同的方法，从不同方面校验我们寻找到的仿冒应用中是否存在排名欺诈行为。
+结合最后的人工复核，我们确认了仿冒应用中确实存在排名欺诈行为的事实，向仿冒应用生态认知的谜题补上了又一块拼图。
 
 借助本文提供的数据和分析结果，我们希望读者能获得一个面向仿冒应用及其生态的清晰视角。
 同时，我们更希望本文能抛砖引玉，吸引更多科研人员投入到对移动灰色产业的观察研究中。
