--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -22,31 +22,34 @@ Thanks to our full understanding of malware, it is now possible to monitor malwa
 Therefore, even if there is an outbreak of malware in the new form, manufactures are able to propose remedies timely.
 % 相对地，我们对仿冒应用的认识匮乏，则很可能会成为隐患。
 Comparatively, our lack of fake apps' knowledge is very possible to become a snake in the grass.
-% 仿冒应用都有怎样的形态？仿冒应用在各个市场上的分布如何？它们是否会包含恶意行为？有什么样的发展趋势？
-What is the form of fake apps? How are they distributed in different app markets? Do they perform malicious behavior? What kind of developing tendency do they have?
+% 仿冒应用都有怎样的形态？仿冒应用在各个市场上的分布如何？它们是否会包含恶意行为？有什么样的发展趋势？和其他黑灰产环节是否会有联系？
+What is the form of fake apps? How are they distributed in different app markets? Do they perform malicious behavior? What kind of developing tendency do they have? Are they connected to other branches of the mobile underground industry?
 % 这些问题都尚未有人给出过解答。
 None of these questions were answered so far.
 % 在未有前人研究基础的情况下，直接从业界收集数据入手分析无疑是获得第一手资料的最佳途径。
 Without any previous study, there is no doubt that collecting and analyzing data directly from the industry is the best way to win the first-hand information.
-% 因此，我们进行了针对仿冒应用的大规模数据收集和实证研究，并且结合市场上的评论对仿冒应用获得的反馈作出了进一步分析。
-Thus, we employ a large-scale data gathering and empirical study towards fake apps, along with an analysis of feedbacks earned by some fake apps in an app market.
+% 因此，我们进行了针对仿冒应用的大规模数据收集和实证研究，其中实证研究分为数据挖掘，案例分析和用户反馈分析三个部分。
+Thus, we employ a large-scale data gathering and empirical study towards fake apps, in which the empirical study part is consists of three parts: data mining, case study, and user feedback analysis.
 
-% 在实证研究方面，针对上述问题，我们从三个不同视角对数据进行了探究，其分别为：仿冒应用的基本特征，影响仿冒应用数量的因素，以及仿冒应用的发展轨迹。
-In terms of empirical study, on one hand, we leverage three different perspectives to explore our data in order to answer our questions.
-The three perspectives are, namely, fake apps' characteristics, factors affecting fake apps' number, the developing trends of fake apps.
+% 在数据挖掘方面，针对前面提到的问题，我们从三个不同视角对数据进行了探究，其分别为：仿冒应用的基本特征，影响仿冒应用数量的因素，以及仿冒应用的发展轨迹。
+In terms of data mining, we leverage three different perspectives to explore our data in order to answer the aforementioned questions.
 % 三个视角由浅入深，从仿冒应用的应用名、包名和APK包大小等基本信息特征开始测量，再对可能与仿冒应用数量关联的因素进行量化分析，最后引入时间因素对数据进行挖掘。
+The three perspectives are, namely, fake apps' characteristics, factors affecting fake apps' number, the developing trends of fake apps.
 They follow an easy-to-complex pattern.
 We start from the basic pattern of fake apps, then perform quantitative studies on factors which are possible to affect the number of fake apps, and lastly introduce time factor to mine the data.
 % 从三个不同视角的分析中，本文提供了包括仿冒应用命名倾向、仿冒应用作者对应用市场拦截的规避策略等珍贵的领域知识。
 As a result, the three perspectives provide us with valuable domain knowledge, like fake apps’ naming tendencies and fake developers’ evasive strategies.
-% 本文还对数据中较为特别的样本作出了详尽的案例分析，除了可以印证上述的领域知识与发现之外，也能引起我们对现今应用市场生态环境的思考。
-Moreover, we provide a number of thought-provoking and detailed case studies, confirming the findings and domain knowledge mentioned above.
 
-% 在用户反馈分析方面，我们针对仿冒应用在应用市场上获得的评级和评论等进行了一系列的分析与验证。
-In terms of user feedback analysis, on the other hand, we conduct a series of analysis and verification on the ratings and comments the fake apps earned from an app market.
+% 案例分析方面，我们从收集到的数据中手动筛选出了其中具有代表性的三个案例。
+And then, on the case analysis's side, we manually screen out the most representitive cases from our data.
+% 这些案例除了可以印证上述的领域知识与发现之外，还提供了更多关于仿冒应用生态的细节，值得引起我们对现今应用市场生态环境的思考。
+These cases can, not only confirm the findings and domain knowledge mentioned above but also provide more details about the nature of fake apps, raising our concern on the app markets' status-quo.
+
+% 在用户反馈分析方面，我们针对仿冒应用在应用市场上获得的评级和评论等进行了一系列的分析，以了解用户对仿冒应用的态度及验证仿冒应用与移动黑灰产中的排名欺诈是否存在关联。
+Last but not least, on feedback analysis, we conduct a series of analyses on the ratings and comments the fake apps earned from an app market to answer two questions: How do users think about fake apps? Will fake apps cooperate with ranking fraud --- another branch of the mobile underground industry?
 % 鉴于前人研究中有对应用进行排名欺诈行为的探索，我们也使用了两个不同的方法，从不同方面验证我们寻找到的仿冒应用中是否存在排名欺诈行为。
 Due to the fact that previous studies revealed the existence of ranking fraud in App markets, we also utilize two different measurements to verify whether the fake apps leverage ranking fraud service.
-% 结合最后的人工复核，我们确认了仿冒应用中确实存在排名欺诈行为的事实，向仿冒应用生态认知的谜题补上了一块拼图。
+% 结合最后的人工复核，我们确认了仿冒应用中确实存在排名欺诈行为的事实，向仿冒应用生态认知的谜题补上了又一块拼图。
 As discerned and confirmed by our manual review, we make sure that some fake apps do deploy ranking fraud services to raise their exposure.
 By revealing this, we gather another piece of evidence to implement the puzzle of fake apps' nature, making our study more complete.
 
