--- a/edwin_2019/chapter-feedback.tex
+++ b/edwin_2019/chapter-feedback.tex
@@ -1,12 +1,13 @@
 \chapter{仿冒应用的评论分析}
 \label{chp:feedback}
 
-应用市场中的用户反馈是Android应用生态的重要环节。
+应用市场中的用户反馈区是Android应用生态的重要部分，也是移动黑灰产从业者的深耕之地。
+热心用户会在评论区提出反馈，黑灰产从业者则会利用排名欺诈的手段牟取利益。
 为了进一步对仿冒应用的生态有所了解，我们有必要搜集和分析仿冒应用的评论。
 对于与仿冒应用相关的评论，我们有以下待解答的问题：
 有多少用户会对这些应用进行评论？
 用户对这些应用的使用感受如何？
-我们有没有可能从用户评论里获取到其他信息？
+仿冒应用是否会跟排名欺诈有所联系？
 
 为了回答这些问题，我们从\texttt{360手机助手}应用商店中爬取了部分应用和它们的所有历史评论，然后对这些评论进行了处理和分析。
 
@@ -325,11 +326,13 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 我们还随机抽取了一些发布相同好评的不同用户进行追查，结果发现部分用户在我们收集到的数据集中的评论数只有一到两条，这很有可能是提供排名欺诈服务的商家规避检测的一种策略。
 
 \section{本章小结}
-本章从仿冒应用在市场中收到的评论入手，分析了用户对于这类应用的反响。
-然而，出人意料的一致好评让我们感到疑惑，因此我们选取了部分应用的评论数据进行分析，并借鉴了前人研究提出了研究手段对排名诈骗行为进行筛查。
+本章从仿冒应用在市场中收到的评论入手，首先分析了用户对于这类应用的反响。
+用户给出的反馈为一致好评，这十分出人意料。
+进一步地，为验证仿冒应用与排名欺诈是否有关联，我们选取了部分应用的评论数据进行分析，并借鉴了前人研究提出了研究手段进行筛查。
 
-从结果看，无论是基于评论内容相似度的排名欺诈排查方法还是基于用户可信度权重的排查方法，都具有良好的结果。
-但是，两种方法在性能上依然有较大的区别。
+一方面，从结果看，无论是基于评论内容相似度的排名欺诈排查方法还是基于用户可信度权重的排查方法，都证明了仿冒应用的确会利用排名欺诈服务提升自身的曝光率。
+另一方面，用两种方法进行筛查也顺便比较了他们的有效性。
+从性能层面看，两种方法有较大的区别。
 我们发现部分可疑好评的用户仅仅评论过一到两次，如果大部分排名欺诈用户都采用这种只发布少量好评的策略，基于用户可信度权重的排查方法就很可能会因为可参考的数据量太小而失效；
 另外，基于用户可信度权重的排查方法会带来相当大的运算量，相比之下，基于评论内容相似度的代码只需几分钟就能运算完毕。
-综合上述性能因素，我们认为基于评论内容相似度的排查方法是更为可行的排查方式。
+综合上述因素，我们认为基于评论内容相似度的排查方法是更为可行的排查方式。
