--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -152,7 +152,7 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 	通过对案例的分析，我们进一步印证了前序测量中发现的结果与结论。
 
 	\item {\bf 对仿冒应用评论的挖掘与分析}
-	最后，我们进一步从应用评论出发，在试图从市场反应了解用户对仿冒应用的态度以外，也使用了两种不同方法探究了仿冒应用与近期研究热点之一——排名欺诈行为——之间的关联，以深化读者对仿冒应用生态的了解。
+	最后，我们进一步从应用评论出发，在试图从市场反应了解用户对仿冒应用的态度以外，也尝试挖掘仿冒应用与排名欺诈（另一种移动黑灰产）之间是否有关联，以深化读者对仿冒应用生态的了解。
 
 \end{itemize}
 
